# rust-chess

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: board.rs  camera.rs  client.rs  connection.rs  game.rs  graphic_object.rs  gui.rs  helpers.rs  lib.rs  main.rs  model_loader.rs  protocol.rs
src/http_server/: Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
src/http_server/migrations/2018-10-21-203312_create_clients/: up.sql
src/http_server/migrations/2018-10-21-210146_alter_client_pk/: down.sql  up.sql
src/http_server/migrations/2018-10-21-231609_create_games/: down.sql  up.sql
src/http_server/migrations/2018-10-28-004947_active_clients/: down.sql  up.sql
src/http_server/migrations/2018-10-28-184931_clients_online_not_null/: down.sql  up.sql
src/http_server/migrations/2018-10-28-185402_clients_name_not_null/: down.sql  up.sql
src/http_server/migrations/2018-10-30-073504_game_fields/: down.sql  up.sql
src/http_server/migrations/2018-10-30-074640_games_drop_client_id/: down.sql  up.sql
src/http_server/migrations/2018-10-30-075035_create_client_game_association/: down.sql  up.sql
src/http_server/src/: db.rs  main.rs  schema.rs  util.rs
src/models/: board.rs  mod.rs  model.rs  piece.rs
tests/: tcp_client_and_host_test.rs  tcp_connection_test.rs
