[package]
name = "rust_chess"
version = "0.2.0"
authors = ["Lev <lev.kokotov@gmail.com>"]

[dependencies]
colored = "1.6.1"
regex = "0.2.11"
lazy_static = "1.1.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
cgmath = "0.16.1"
gl = "0.9.0"
glfw = "0.24.0"
tobj = "0.1.6"
reqwest = "0.9.2"
